Refactor QR code utility and add GridBagUtils
Changes in `QrCodeUtils.java` include updating the methods to throw "Exception" rather than the specific types and replacing the import and usage of URL to URI. A new class `GridBagUtils.java` was added for implementing a GridBag layout utility. Adjustments were made in `QRCodeComponent.java` to use `GridBagUtils`.